<resources>
    <string name="app_name">Save The Mother And Child</string>
    <string name="welcome_text">Choose The Function</string>
    <string name="your_status">Your status</string>
  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDStcqSZiaoaCN9OtZoeWmSRg6s5fFZwZw</string>
        <string name="doctor">Doctor</string>
    <string name="woman">Woman</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_union">Enter Union</string>
    <string name="pregnant_woman">Pregnant Woman</string>
    <string name="ovulation_days">Ovulation (days)</string>
    <string name="pre_pregnanacy_height_in_cm">Pre Pregnanacy Height (in cm)</string>
    <string name="enter_division">Enter Division</string>
    <string name="enter_district">Enter District</string>
    <string name="enter_mobilnumber">Enter Mobile Number</string>
    <string name="seclect_due_date">Seclect Due Date</string>
    <string name="enter_date">Enter Due Date </string>
    <string name="enter_date2">Enter LMP Date</string>
    <string name="date_status">Date Status</string>
    <string name="others">Others</string>
    <string name="personal_info">Enter Personal Information</string>
    <string name="name">Name</string>
    <string name="your_specialisation">Your Specialisation</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="affiliations">Enter Affiliations</string>
    <string name="enter_hospital_name">Enter Hospital Name</string>
    <string name="enter_hospital_number">Enter Hospital Number</string>
    <string name="add_more">Add More</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="all_tips">All Tips</string>
    <string name="n">........................................................\n....................................</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="reminder_details">Reminder details</string>
    <string name="Save">Save</string>
    <string name="Appoinment_request">Appointment Request</string>
    <string name="Appointment_list">Appointment List</string>
    <string name="set_reminder2">Set Reminder</string>
    <string name="change_data2">Change Data</string>
    <string name="help2">Help</string>
    <string name="others2">Others</string>
    <string name="switch2">Switch</string>
    <string name="date">Date :</string>
    <string name="message">Message :</string>
    <string name="time">Time :</string>
    <string name="title">Title :</string>
    <string name="edit">Edit</string>
    <string name="delete">Delet</string>
    <string name="set_reminder_user">Set Reminder</string>
    <string name="reminder_time_user">Reminder Time</string>
    <string name="reminder_details_user">Reminder details</string>
    <string name="save_user">Save</string>
    <string name="set_reminder_doctor">set_reminder_doctpr</string>
    <string name="enter_weight_kg">Enter weight (kg)</string>
    <string name="button">Button</string>
    <string name="calculate_weight_status">Calculate Weight Status</string>
    <string name="woman1">woman</string>
    <string name="remaining_time">Remaining Time :</string>
    <string name="due_date">Due Date :</string>
    <string name="pregnant_for">Pregnant FOR :</string>
    <string name="lmp">LMP :</string>
  <string name="one">It’s a potentially life-changing week. You will ovulate and it egg meets sperm. You will be on your way to pregnancy.</string>
  <string name="two">It’s a potentially life-changing week. You will ovulate and it egg meets sperm. You will be on your way to pregnancy.</string>
  <string name="three">Your baby is a tiny ball_ called a blastocyst _ made up of several hundred cells that are multiplying quickly.</string>
  <string name="four">Deep in your uterus, your baby is an embryo made up of two layers and your primitive placenta is developing.</string>
  <string name="five">Your tiny embryo is growing like crazy, and you may be noticing pregnancy discomforts like breasts and fatigue.</string>
  <string name="six">Your baby’s nose, mouth, and ears are beginning to take shape. You may be having moving sickness and spotting.</string>
  <string name="seven">Your baby still an embryo with a small tail is forming hands and feet. Your uterus has double in size. </string>
  <string name="eight">Your baby is constantly moving through you can feel it.  Meanwhile you may be making decisions about prenatal tests.</string>
  <string name="nine">Nearly an inch long now, your baby is starting to look more human. You have probably noticed your waist thickening.</string>
  <string name="ten">Your baby has finished the most critical part of development organs and structures are in place and reedy to grow.

</string>
  <string name="eleven">Your baby’s hands will soon open and close into fists, and tiny tooth buds are appearing underneath the gums.

</string>
  <string name="twelve">Your little one’s teeny toes can curl, her brain is growing furiously and her kidneys are starting to excrete urine.</string>
  <string name="thirteen">It’s the last week of the first trimester. Your baby now has exquisite fingerprints and is almost 3 inches long.</string>
  <string name="fourteen">Your baby’s tiny features are making different expressions. And you may be feeling more energetic and less nauseated.</string>
  <string name="fifteen">Your baby can sense light and is forming taste buds. Have a stuffy nose? It’s a surprising pregnancy side effect. </string>
  <string name="sixteen">Get ready for a growth spurt. In the next few weeks, your baby will double his weight and add inches to his length.</string>
  <string name="seventeen">Your baby’s skeleton is changing from soft cartilage to bone, and the umbilical cord is growing stronger and thicker. </string>
  <string name="eightteen">Your baby’s genitals are developed enough to see on an ultrasound Hungry.   An increase in appetite is normal now. </string>
  <string name="nineteen">Go ahead and sing. Your baby may be able to hear you and if your sides are aching. It could be round ligament pain.</string>
  <string name="twenty">Congratulations, you are at the halfway mark in your pregnancy. Your baby is swallowing more now and producing meconium.</string>
  <string name="twenty_one">Feeling your baby move? Those early flutters will turn into full-fledged kicks. Cool fact, She is eyebrows now.</string>
  <string name="twenty_two">Your baby starting look like a miniature newborn and your growing belly may be turning into a hand magnet.</string>
  <string name="twenty_three">When you are on the move, your baby can feel the motion. Pretty soon, you may notice swelling in your ankles and feet.</string>
  <string name="twenty_four">Your little one is starting to add some baby fat and grow more hair. Your hair may be looking extra lustrous too.</string>
  <string name="twenty_five">Your little one is starting to add some baby fat and grow more hair. Your hair may be looking extra lustrous too.</string>
  <string name="twenty_six">Your baby is inhaling and exhaling small amounts of amniotic fluid. This is good practice for breathing.</string>
  <string name="twenty_seven">Feel a tickle?  It may be your baby hiccupping. He is also opening and closing his eyes and even sucking his fingers.</string>
  <string name="twenty_eight">Welcome to your last trimester. Your developing baby’s eyes may be able to see light filtering in through your womb.</string>
  <string name="twenty_nine">Your baby’s muscles and lungs are continuing to mature, and her head is growing to make room for her developing brain. </string>
  <string name="thirty">Your baby weight almost 3 pounds, meanwhile, you may be batting mood swings, clumsiness and fatigue. </string>
  <string name="thirty_one">Your baby’s strong kicks might be keeping you up at night, and you may be feeling Braxton Hicks contraction too.</string>
  <string name="thirty_two">Your baby is plumping up. Meanwhile, you expanding uterus may causes heartburn and shortness of breath.</string>
  <string name="thirty_three">With your baby now weighting a little over 4 pounds, You might be wadding and having trouble getting comfy in bed.</string>
  <string name="thirty_four">Your baby’s central nervous system and lungs are maturing and dizziness and fatigue may be slowing you down. </string>
  <string name="thirty_five">Your baby is too snug in your womb to do some results, but you will still feel frequent_ if less dramatic – movements.</string>
  <string name="thirty_six">Your baby is gaining about an ounce a day. You may feel her drop drown into your pelvis as you approach your due date.</string>
  <string name="thirty_seven">Your baby’s brain and lungs are continuing to mature. You may have more vaginal discharge and occasional contractions. </string>
  <string name="thirty_eight">Your baby has a firm grasp, which you will soon be able to test in person. Meanwhile, watch out for signs of
pre eclampsia.
</string>
  <string name="thirty_nine">Your baby is full term this week and waiting to greet the world. If your water breaks, call your healthcare provider.</string>
  <string name="fourty">Your baby is the size of a small pumpkin. Don’t worry if you are still pregnant.  It’s common to go past your due date.</string>
  <string name="fourty_one">As cozy as he is, your baby can’t stay inside you much longer. You will go into labor or be induced soon. </string>
  <string name="wone">The question that most often follows "Am I really pregnant?" is "When is my baby due?". You will start experiencing true pregnancy symptoms at 10 to 14 days after ovulation.</string>
  <string name="wtwo">The question that most often follows "Am I really pregnant?" is "When is my baby due?". You will start experiencing true pregnancy symptoms at 10 to 14 days after ovulation.</string>
  <string name="wthree">Dramatic changes are taking place inside your womb. Your partner"s sperm has fertilized an egg, and conception has taken place. The embryo starts burrowing into your uterine wall.</string>
  <string name="wfour">Light spotting can also be normal, and it"s due to implantation bleeding. The spotting is typically pink or light brown. It should never be heavy.</string>
  <string name="wfive">Week info-The gestational sac and baby can be detected at 5 weeks after your last menstrual period by a transvaginal ultrasound. The gestational sac and baby only measures 5 mm.</string>
  <string name="wsix">Are you experiencing early pregnancy symptoms yet? Maybe a slight twinge of nausea. Don"t worry if you haven"t noticed any change yet. A lack of symptoms does not mean that anything is wrong.</string>
  <string name="wseven"> Granted, it"s hard to focus on other people"s feelings right now -- what with having to tend to your own tummy issues -- but there"s a rather selfless question you"ll want to ponder: How is your partner taking all of this? Some partners are super-supportive and ecstatic, while others may feel overwhelmed by the slew of changes taking place. It"s perfectly normal for yours to suddenly obsess over the family finances or fixate on the idea of moving to a bigger home. (Just call it the male version of the nesting instinct.) Chat up your guy to feel out any of his worries or concerns. Goodness knows you"re going to be counting on him to do the same for you.</string>
</resources>