<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7ad3e2">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_set_reminder_doctor"
        android:text="@string/set_reminder2"
        android:textColor="#29a3a3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_changedata_doctors"
        android:text="@string/change_data2"

        android:textColor="#29a3a3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_others_help_doctor"
        android:text="@string/help2"
        android:textColor="#29a3a3" />
</LinearLayout>