<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#7ad3e2"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"

      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_marginTop="33dp"
      tools:ignore="UselessParent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"

        android:text="Registration For Doctor "
        style="@android:style/Widget.Button"
        tools:ignore="HardcodedText,RtlHardcoded"
        android:id="@+id/tex_registration_doctor"
        android:textColor="#097789"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAllCaps="true">
    </TextView>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/down_arrow"
        android:text="@string/Appoinment_request"
        style="@android:style/Widget.Button"
        tools:ignore="RtlHardcoded"
        android:textColor="#097789"
        android:id="@+id/Appointment_req">

    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/down_arrow"
        style="@android:style/Widget.Button"
        android:id="@+id/Appointment_list"
        android:text="@string/Appointment_list"
        tools:ignore="HardcodedText,RtlHardcoded"
        android:textColor="#097789">
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/down_arrow"
        android:text="@string/others"
        style="@android:style/Widget.Button"
        android:id="@+id/others_doctor"
        tools:ignore="RtlHardcoded"
        android:textColor="#097789">
    </TextView>
  </LinearLayout>
</RelativeLayout>
